# dbt-autodoc

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/dbt_autodoc/: cli.py  sample_config.yml
tests/: test_cli.py  test_db.py
