[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-autodoc"
version = "1.0.6"
description = "Automated documentation generator for dbt projects using Google Gemini AI"
readme = "README.md"
authors = [
  { name = "JustDataPlease", email = "hey@justdataplease.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "duckdb>=0.9.0",
    "google-generativeai>=0.3.0",
    "ruamel.yaml>=0.17.0",
    "python-dotenv>=1.0.0",
    "dbt-osmosis",
    "dbt-duckdb",
    "asyncpg",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "pytest-asyncio", "build", "twine"]

[project.scripts]
dbt-autodoc = "dbt_autodoc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
